# llamarn

./: .gitignore  .gitmodules  BREAKING.md  GPU.md  INTERFACE.md  LAST_CHANGE.md  Makefile  README.md  RNLlamaCpp.podspec  full_checkup.md  package-lock.json  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json  vision-phase.md
.github/workflows/: ci-gpu.yml  ci.yml
android/: CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/novastera/llamarn/: RNLlamaCppPackage.kt
cpp/: LlamaCppModel.cpp  LlamaCppModel.h  PureCppImpl.cpp  PureCppImpl.h  SystemUtils.cpp  SystemUtils.h  build-info.cpp  rn-completion.cpp  rn-llama.h  rn-llama.hpp  rn-mtmd-audio-wrap.cpp  rn-multimodal.cpp  rn-multimodal.h  rn-utils.h  rn-utils.hpp
example/: README.md  app.json  metro.config.js  package.json  test-proguard-only.sh  test-release-build.sh
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/rnllamacpp/example/: AssetCheckModule.java  AssetCheckPackage.java  MainActivity.kt  MainApplication.kt
example/ios/: .xcode.env.local  Podfile
example/ios/llamarnexample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/llamarnexample.xcodeproj/: project.pbxproj
example/ios/llamarnexample.xcodeproj/xcshareddata/xcschemes/: llamarnexample.xcscheme
example/ios/llamarnexample.xcworkspace/: contents.xcworkspacedata
example/scripts/: copy-assets.js
example/src/: App.tsx  ConsolidatedTestScreen.tsx  ModelChatTestScreen.tsx  VisionChatScreen.tsx
scripts/: build_android_external.sh  build_android_ggml_gpu_backends.sh  build_android_gpu_backend.sh  build_apple_external.sh  setupLlamaCpp.sh  used_version.sh  verify-pack-contents.sh
scripts/win/: setupLlamaCpp.ps1
src/: NativeRNLlamaCpp.ts  index.tsx
src/__tests__/: NativeRNLlamaCpp.test.ts
